[project]
name = "form-fox-hooks"
version = "0.1.0"
authors = [
    { name = "Dan Hollis", email = "dh@leetsys.com" }
]
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.12"

[tool.basedpyright]
include = ["app"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.ruff]
force-exclude = true
exclude = [
    "setup",
]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "ANN",
    "COM",
    "C90",
    "DJ",
    "EXE",
    "T10",
    "TID",
    "D100",
    "D103",
    "D104",
    "D107",
    "D200",
    "D203",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",
    "E501",
    "S201",
    "TRY003",
    "TD002",
    "TD003",
    "FIX002",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = [
    "flask",
]